README: Add minimal information about dependencies
This improves the content to inform it requires the meta-updatehub and
meta-raspberrypi to work.

Signed-off-by: Otavio Salvador <otavio@ossystems.com.br>

--- a/README
+++ b/README
@@ -1,64 +1,16 @@
-This README file contains information on the contents of the
-updatehub-raspberrypi layer.
+Raspberry Pi OpenEmbedded/Yocto Project BSP support layer for UpdateHub
+=======================================================================
 
-Please see the corresponding sections below for details.
-
+UpdateHub provides a generic and safe Firmware Over-The-Air agent for
+Embedded and Industrial Linux-based devices.
 
 Dependencies
-============
+------------
 
 This layer depends on:
 
-  URI: git://git.openembedded.org/bitbake
-  branch: master
+  URI: git://github.com/agherzan/meta-raspberrypi
+  branch: krogoth
 
-  URI: git://git.openembedded.org/openembedded-core
-  layers: meta
-  branch: master
-
-  URI: git://git.yoctoproject.org/xxxx
-  layers: xxxx
-  branch: master
-
-
-Patches
-=======
-
-Please submit any patches against the updatehub-raspberrypi layer to the
-xxxx mailing list (xxxx@zzzz.org) and cc: the maintainer:
-
-Maintainer: XXX YYYYYY <xxx.yyyyyy@zzzzz.com>
-
-
-Table of Contents
-=================
-
-  I. Adding the updatehub-raspberrypi layer to your build
- II. Misc
-
-
-I. Adding the updatehub-raspberrypi layer to your build
-=================================================
-
---- replace with specific instructions for the updatehub-raspberrypi layer ---
-
-In order to use this layer, you need to make the build system aware of
-it.
-
-Assuming the updatehub-raspberrypi layer exists at the top-level of your
-yocto build tree, you can add it to the build system by adding the
-location of the updatehub-raspberrypi layer to bblayers.conf, along with any
-other layers needed. e.g.:
-
-  BBLAYERS ?= " \
-    /path/to/yocto/meta \
-    /path/to/yocto/meta-poky \
-    /path/to/yocto/meta-yocto-bsp \
-    /path/to/yocto/meta-updatehub-raspberrypi \
-    "
-
-
-II. Misc
-========
-
---- replace with specific information about the updatehub-raspberrypi layer ---
+  URI: git://github.com/UpdateHub/meta-updatehub.git
+  branch: krogoth
