--- a/README
+++ b/README
@@ -10,7 +10,7 @@ Dependencies
 This layer depends on:
 
   URI: git://github.com/agherzan/meta-raspberrypi
-  branch: krogoth
+  branch: master
 
   URI: git://github.com/UpdateHub/meta-updatehub.git
-  branch: krogoth
+  branch: master
